projects/vb6parse/snapshots/tests/form/endless_runner_game_vb6_0/endless_runner_game_vb6_0_form6_form_load.snap
---
source: projects/vb6parse/tests/form/endless_runner_game_vb6_0.rs
expression: form_file
---
form:
  Form:
    name: Form6
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Form6
      client_height: 3015
      client_left: 120
      client_top: 465
      client_width: 4560
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form6
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 15615
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 28560
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: exit
        tag: ""
        index: 0
        kind:
          CommandButton:
            properties:
              appearance: ThreeD
              back_color:
                System:
                  index: 15
              cancel: false
              caption: exit
              causes_validation: "Yes"
              default: false
              disabled_picture: ~
              down_picture: ~
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 975
              help_context_id: 0
              left: 13440
              mask_color:
                RGB:
                  red: 192
                  green: 192
                  blue: 192
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              picture: ~
              right_to_left: LeftToRight
              style: Standard
              tab_index: 2
              tab_stop: Included
              tool_tip_text: ""
              top: 5520
              use_mask_color: DoNotUseMaskColor
              whats_this_help_id: 0
              width: 2775
      - name: Label1
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                RGB:
                  red: 0
                  green: 192
                  blue: 192
              back_style: Opaque
              border_style: None
              caption: ""
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 615
              left: 9480
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 1
              tool_tip_text: ""
              top: 5400
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 2655
              word_wrap: NonWrapping
      - name: Label3
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                RGB:
                  red: 255
                  green: 128
                  blue: 0
              back_style: Opaque
              border_style: None
              caption: ""
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 975
              left: 9480
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 0
              tool_tip_text: ""
              top: 6000
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 2655
              word_wrap: NonWrapping
    menus: []
objects: []
version:
  major: 5
  minor: 0
attributes:
  name: Form6
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: exit_Click
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: Identifier
                    text: Form5
                  - kind: PeriodOperator
                    text: "."
                  - kind: Identifier
                    text: Show
                  - kind: Newline
                    text: "\r\n"
              - kind: UnloadStatement
                children:
                  - kind: UnloadKeyword
                    text: Unload
                  - kind: Whitespace
                    text: " "
                  - kind: IdentifierExpression
                    children:
                      - kind: MeKeyword
                        text: Me
              - kind: Newline
                text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
