projects/vb6parse/snapshots/tests/form/endless_runner_game_vb6_0/endless_runner_game_vb6_0_form8_form_load.snap
---
source: projects/vb6parse/tests/form/endless_runner_game_vb6_0.rs
expression: form_file
---
form:
  Form:
    name: Form8
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Form8
      client_height: 3015
      client_left: 120
      client_top: 465
      client_width: 4560
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form8
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 15615
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 28560
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: Drive1
        tag: ""
        index: 0
        kind:
          DriveListBox:
            properties:
              appearance: ThreeD
              back_color:
                System:
                  index: 5
              causes_validation: "Yes"
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 8
              height: 315
              help_context_id: 0
              left: 8280
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              tab_index: 3
              tab_stop: Included
              tool_tip_text: ""
              top: 8760
              visible: Visible
              whats_this_help_id: 0
              width: 4335
      - name: File1
        tag: ""
        index: 0
        kind:
          FileListBox:
            properties:
              appearance: ThreeD
              archive: Include
              back_color:
                System:
                  index: 5
              causes_validation: "Yes"
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 8
              height: 2625
              help_context_id: 0
              hidden: Exclude
              left: 12240
              mouse_icon: ~
              mouse_pointer: Default
              multi_select: None
              normal: Include
              ole_drag_mode: Manual
              ole_drop_mode: None
              pattern: "*.*"
              read_only: Include
              system: Include
              tab_index: 2
              tab_stop: Included
              tool_tip_text: ""
              top: 5520
              visible: Visible
              whats_this_help_id: 0
              width: 2775
      - name: Dir1
        tag: ""
        index: 0
        kind:
          DirListBox:
            properties:
              appearance: ThreeD
              back_color:
                System:
                  index: 5
              causes_validation: "Yes"
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 8
              height: 2790
              help_context_id: 0
              left: 8400
              mouse_icon: ~
              mouse_pointer: Default
              ole_drag_mode: Manual
              ole_drop_mode: None
              tab_index: 1
              tab_stop: Included
              tool_tip_text: ""
              top: 5520
              visible: Visible
              whats_this_help_id: 0
              width: 3375
      - name: Label1
        tag: ""
        index: 0
        kind:
          Label:
            properties:
              alignment: LeftJustify
              appearance: ThreeD
              auto_size: Fixed
              back_color:
                System:
                  index: 15
              back_style: Opaque
              border_style: None
              caption: Upload music
              data_field: ""
              data_format: ""
              data_member: ""
              data_source: ""
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              fore_color:
                System:
                  index: 18
              height: 975
              left: 6960
              link_item: ""
              link_mode: None
              link_timeout: 50
              link_topic: ""
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              right_to_left: LeftToRight
              tab_index: 0
              tool_tip_text: ""
              top: 3840
              use_mnemonic: true
              visible: Visible
              whats_this_help_id: 0
              width: 6975
              word_wrap: NonWrapping
      - name: Shape1
        tag: ""
        index: 0
        kind:
          Shape:
            properties:
              back_color:
                RGB:
                  red: 255
                  green: 128
                  blue: 0
              back_style: Transparent
              border_color:
                System:
                  index: 8
              border_style: Solid
              border_width: 1
              draw_mode: CopyPen
              fill_color:
                RGB:
                  red: 255
                  green: 128
                  blue: 128
              fill_style: Transparent
              height: 7455
              left: 6480
              shape: Rectangle
              top: 3000
              visible: Visible
              width: 9735
    menus: []
objects: []
version:
  major: 5
  minor: 0
attributes:
  name: Form8
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: WindowsMediaPlayer1_OpenStateChange
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: ByValKeyword
                text: ByVal
              - kind: Whitespace
                text: " "
              - kind: Identifier
                text: NewState
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: LongKeyword
                text: Long
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: AssignmentStatement
                children:
                  - kind: MemberAccessExpression
                    children:
                      - kind: Identifier
                        text: WindowsMediaPlayer1
                      - kind: PeriodOperator
                        text: "."
                      - kind: Identifier
                        text: URL
                  - kind: EqualityOperator
                    text: "="
                  - kind: IdentifierExpression
                    children:
                      - kind: Newline
                        text: "\r\n"
                  - kind: Newline
                    text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
